gtkpod V0.99.6CVS

       NEW FEATURE: Support of several iPods (currently you need to
       edit the itdb_* entries in ~/.gtkpod/prefs to add
       repositories). Each iPod can be loaded/ejected
       individually. Scripts are called before loading (gtkpod.load)
       and after saving (gtkpod.eject) with the mountpoint as the
       first argument.

       IMPROVEMENT: Displays artwork on some newer iPod models now as
       well -- this includes the new mobile phone iPods.

       IMPROVEMENT: Podcasts are marked as unplayed (on the iPod, with
       a bullet in front of the title) when newly added to the podcast
       list, and unmarked once they have been played once on the iPod.

       IMPROVEMENT: Support to sync thunderbird's address book to an
       iPod Nano with old firmware that would otherwise only display
       the first address. This script may be useful to other users as
       well as it writes out one vcf file per contact instead of just
       one big file containing all contacts. Thanks to Paul Oremland.

       NEW: Preliminary (no meta data) support of h.264 video format
       via the libmp4v2 interface. Thanks to Peter Lieverdink.

       NEW: Script to sync notes from Tomboy to the iPod. Thanks to
       Tejas Dinkar.

       NEW: Support of iTunes iTunNORM tag for volume normalisation of
       mp4 tracks.

       NEW: Support of aacgain's replay gain tag for volume
       normalisation of mp4 tracks (takes precedence over the iTunNORM
       tag, see http://altosdesign.com/aacgain/)

       NEW: Support for start time, stop time, skip when shuffling and
       remember playback position.

       BUGFIX: Pressing 'OK' when syncing directories several times
       could crash gtkpod. Thanks to dforsi.

       BUGFIX: Exporting tracks did not work if the template
       extensions (.mp3...) did not match case-sensitively, possibly
       leading to non-exported tracks. Thanks to Mattias Wadman.
