@@ -9344,7 +9344,7 @@ filename if they are (still) empty:</property>
 		  <child>
 		    <widget class="GtkLabel" id="label394">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Artwork&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Coverart&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -9404,18 +9404,39 @@ filename if they are (still) empty:</property>
 			  <property name="spacing">0</property>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="coverart">
+			    <widget class="GtkCheckButton" id="coverart_apic">
 			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">artist: %a, album: %A, composer: %c, title: %t, genre: %G, track nr: %T, CD nr: %C, year: %Y, skip data: %*, the character '%': %%. You can separate several templates by a ';'. The first one matching the filename will be used. Example: '%a - %A/%T %t.mp3;%t.wav'.</property>
+			      <property name="tooltip" translatable="yes">Music files can have images embedded in the APIC tag. Currently this is only supported for MP3 files.</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">Add artwork from file using the following template</property>
+			      <property name="label" translatable="yes">Read coverart from embedded APIC data</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
 			      <property name="active">False</property>
 			      <property name="inconsistent">False</property>
 			      <property name="draw_indicator">True</property>
-			      <signal name="toggled" handler="on_coverart_toggled" last_modification_time="Sat, 10 Dec 2005 13:46:30 GMT"/>
+			      <signal name="toggled" handler="on_coverart_apic_toggled" last_modification_time="Mon, 18 Sep 2006 06:14:57 GMT"/>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="coverart_file">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">artist: %a, album: %A, composer: %c, title: %t, genre: %G, track nr: %T, CD nr: %C, year: %Y, skip data: %*, the character '%': %%. You can separate several templates by a ';'. The first one matching the filename will be used. Example: '%a - %A/%T %t.mp3;%t.wav'.</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Add coverart from file using the following template</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			      <signal name="toggled" handler="on_coverart_file_toggled" last_modification_time="Mon, 18 Sep 2006 06:14:44 GMT"/>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
@@ -9826,7 +9847,28 @@ filename if they are (still) empty:</property>
 			  </child>
 
 			  <child>
-			    <placeholder/>
+			    <widget class="GtkLabel" id="label436">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">If both options are selected, embedded APIC data takes precedence.</property>
+			      <property name="use_underline">False</property>
+			      <property name="use_markup">False</property>
+			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="wrap">False</property>
+			      <property name="selectable">False</property>
+			      <property name="xalign">0</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="width_chars">-1</property>
+			      <property name="single_line_mode">False</property>
+			      <property name="angle">0</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">4</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
 			  </child>
 			</widget>
 			<packing>
